syntax = "proto3";
package bank;

option go_package = "github.com/tendermint/tendermint2/pkgs/sdk/bank/pb";

// messages
message NoInputsError {
}

message NoOutputsError {
}

message InputOutputMismatchError {
}

message MsgSend {
	string FromAddress = 1;
	string ToAddress = 2;
	string Amount = 3;
}